done with laying out the first 10 sqaures, going to come back and add color after the layout is correct, spending too much time trying to figure out the colors.

--- a/TestMondrian/style.css
+++ b/TestMondrian/style.css
@@ -80,3 +80,35 @@ body {
     grid-row: 1 / 2;
     background-color: #9c9e99;
   }
+  .grid-item:nth-child(3) {
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
+  }
+  .grid-item:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
+  }
+  .grid-item:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+  .grid-item:nth-child(6) {
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+  }
+  .grid-item:nth-child(7) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+  .grid-item:nth-child(8) {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+  }
+  .grid-item:nth-child(9) {
+    grid-column: 5 / 6;
+    grid-row: 3 / 4;
+  }
+  .grid-item:nth-child(10) {
+    grid-column: 6 / 7;
+    grid-row: 3 / 4;
+  }
